new contact form

--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -74,10 +74,10 @@
                             <a href="#"><img class="" src="{{ service.picture.url }}" alt="{{ service.title }}"></a>
                         </div>
                     {% endfor %}
-{#                    <div class="services-single">#}
-{#                        <a href="#"><h1>ارسال رزومه</h1></a>#}
-{#                        <a href="#"><img class="" src="{% static "core/images/0001.jpg" %}" alt=""></a>#}
-{#                    </div>#}
+                    {#                    <div class="services-single">#}
+                    {#                        <a href="#"><h1>ارسال رزومه</h1></a>#}
+                    {#                        <a href="#"><img class="" src="{% static "core/images/0001.jpg" %}" alt=""></a>#}
+                    {#                    </div>#}
 
                 </div>
             </div>
@@ -125,7 +125,10 @@
                 -->
                 <!-- FOR FUN !! :) -->
 
-                <div id="65895924565"><script type="text/JavaScript" src="https://www.aparat.com/embed/RJvUP?data[rnddiv]=65895924565&data[responsive]=yes"></script></div>
+                <div id="65895924565">
+                    <script type="text/JavaScript"
+                            src="https://www.aparat.com/embed/RJvUP?data[rnddiv]=65895924565&data[responsive]=yes"></script>
+                </div>
             </div>
         </div>
     </div>
