--- a/apps/store/templates/event/index.html
+++ b/apps/store/templates/event/index.html
@@ -3,8 +3,8 @@
 
 {% block content %}
     <div id="" class="wide">
-        <div class="filter row">
-            <div class="blog-categoty col-4">
+        <div class="filter ">
+            <div class="blog-categoty ">
                 <a type="button" class="btn btn-dark btn-sm btn-tag" href="{% url "store:event_home" %}">همه</a>
                 {% for category in categories %}
                     <a type="button" class="btn btn-light btn-sm btn-tag"
@@ -15,7 +15,7 @@
         <hr>
         <div class="row">
             {% for event in page_obj %}
-                <div class="col-4 blog-single">
+                <div class="col-lg-4 col-sm-6 blog-single">
                     <div class="blog-image">
                         <a class="post-title" href="{{ event.get_absolute_url }}"><h1>{{ event.title }}</h1></a>
                         {#                        <strong class="post-date">{{ event.start_date|jformat:"%d-%m-%Y" }}</strong>#}
