debug some form error text

--- a/apps/account/templates/account/password_reset_form.html
+++ b/apps/account/templates/account/password_reset_form.html
@@ -21,13 +21,13 @@
                                         {{ form.email.label_tag }}
                                     </div>
                                     {{ form.email }}
-                                    {{ form.email.errors }}
+                                    <p class="text-danger"> {{ form.email.errors.as_text }}</p>
                                     {% if form.email.help_text %}
                                         <p class="help">{{ form.email.help_text|safe }}</p>
                                     {% endif %}
                                 </div>
                                 {{ form.captcha }}
-                                {{ form.captcha.errors }}
+                                <p class="text-danger">   {{ form.captcha.errors.as_text }}</p>
 
 
                             </div>
