--- a/apps/account/templates/account/password_change_form.html
+++ b/apps/account/templates/account/password_change_form.html
@@ -18,7 +18,7 @@
                                         {{ form.old_password.label_tag }}
                                     </div>
                                     {{ form.old_password }}
-                                    {{ form.old_password.errors }}
+                                   <p class="text-danger"> {{ form.old_password.errors.as_text }}</p>
                                     {% if form.old_password.help_text %}
                                         <p class="help">{{ form.old_password.help_text|safe }}</p>
                                     {% endif %}
@@ -29,7 +29,7 @@
                                         {{ form.new_password1.label_tag }}
                                     </div>
                                     {{ form.new_password1 }}
-                                     {{ form.new_password1.errors }}
+                                  <p class="text-danger">   {{ form.new_password1.errors.as_text }}</p>
                                 </div>
                                 <div class="form-group col-md-6">
 
@@ -37,13 +37,13 @@
                                         {{ form.new_password2.label_tag }}
                                     </div>
                                     {{ form.new_password2 }}
-                                    {{ form.new_password2.errors }}
+                                  <p class="text-danger">  {{ form.new_password2.errors.as_text }}</p>
                                     {% if form.new_password2.help_text %}
                                         <p class="help">{{ form.new_password2.help_text|safe }}</p>
                                     {% endif %}
                                 </div>
-                                {{ form.captcha.errors }}
                                 {{ form.captcha }}
+                               <p class="text-danger"> {{ form.captcha.errors.as_text }}</p>
                             </div>
                             <button type="submit" class="btn btn-warning">{% translate "reset" %}</button>
                             <input type="hidden" name="next" value="{{ next }}">
