--- a/apps/account/templates/account/password_reset_confirm.html
+++ b/apps/account/templates/account/password_reset_confirm.html
@@ -29,7 +29,7 @@
                                             {{ form.new_password1.label_tag }}
                                         </div>
                                         {{ form.new_password1 }}
-                                        {{ form.new_password1.errors }}
+                                        <p class="text-danger">  {{ form.new_password1.errors.as_text }}</p>
                                     </div>
                                     <div class="form-group col-md-6">
 
@@ -37,13 +37,13 @@
                                             {{ form.new_password2.label_tag }}
                                         </div>
                                         {{ form.new_password2 }}
-                                        {{ form.new_password2.errors }}
+                                        <p class="text-danger"> {{ form.new_password2.errors.as_text }}</p>
                                         {% if form.new_password2.help_text %}
                                             <p class="help">{{ form.new_password2.help_text|safe }}</p>
                                         {% endif %}
                                     </div>
                                     {{ form.captcha }}
-                                    {{ form.captcha.errors }}
+                                    <p class="text-danger">  {{ form.captcha.errors .as_text }}</p>
                                 </div>
                                 {#                                </div>#}
                                 <button type="submit"
