--- a/apps/account/templates/account/password_reset_done.html
+++ b/apps/account/templates/account/password_reset_done.html
@@ -11,7 +11,11 @@
                         <h1>{% translate "Profile" %}</h1>
                         <hr>
                         <p>
-                            {% translate "We've emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly. If you don't receive an email, please make sure you've entered the address you registered with,and check your spam folder." %}
+                            {#                            {% translate "We've emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly. If you don't receive an email, please make sure you've entered the address you registered with,and check your spam folder." %}#}
+                            اگر حسابی با ایمیلی که وارد کرده‌اید وجود داشته باشد، دستورالعمل‌های تنظیم رمز عبور را برای
+                            شما ایمیل کرده‌ایم. شما باید به زودی آنها را دریافت کنید. اگر ایمیلی دریافت نکردید، لطفاً
+                            مطمئن شوید که آدرسی را که با آن ثبت نام کرده اید وارد کرده اید و پوشه هرزنامه خود را بررسی
+                            کنید.
                         </p>
                     </div>
                 </div>
