--- a/apps/account/templates/account/profile.html
+++ b/apps/account/templates/account/profile.html
@@ -13,14 +13,22 @@
                                 <button class="nav-link active" id="home-tab" data-bs-toggle="tab"
                                         data-bs-target="#home" type="button"
                                         role="tab" aria-controls="home" aria-selected="true">
-                                    <h1>{% translate "Profile" %}</h1>
+                                    <h1>خانه</h1>
+                                </button>
+                            </li>
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link" id="profile-tab" data-bs-toggle="tab"
+                                        data-bs-target="#purchases"
+                                        type="button"
+                                        role="tab" aria-controls="purchases" aria-selected="false">
+                                    <h1>{% translate "Purchases" %}</h1>
                                 </button>
                             </li>
                             <li class="nav-item" role="presentation">
                                 <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile"
                                         type="button"
                                         role="tab" aria-controls="profile" aria-selected="false">
-                                    <h1>{% translate "Purchases" %}</h1>
+                                    <h1>تکمیل پروفایل</h1>
                                 </button>
                             </li>
                         </ul>
@@ -31,15 +39,14 @@
                                 <p>{% translate "first_name" %} : {{ user.first_name }}</p>
                                 <p>{% translate "last_name" %} : {{ user.last_name }}</p>
                                 <p>{% translate "email" %} : {{ user.email }}</p>
-                                <p>{% translate "address" %} : {{ user.address }}</p>
                                 <a href="{% url "account:logout" %}"
                                    class="btn btn-outline-danger btn-equal">{% translate "logout" %}</a>
-                                <a href="{% url "account:password_reset" %}"
-                                   class="btn btn-outline-danger btn-equal">{% translate "password reset" %}</a>
-                                <a href="{% url "account:password_change" %}"
-                                   class="btn btn-outline-danger btn-equal">{% translate "password change" %}</a>
+                                {#                                <a href="{% url "account:password_reset" %}"#}
+                                {#                                   class="btn btn-outline-danger btn-equal">{% translate "password reset" %}</a>#}
+                                {#                                <a href="{% url "account:password_change" %}"#}
+                                {#                                   class="btn btn-outline-danger btn-equal">{% translate "password change" %}</a>#}
                             </div>
-                            <div class="tab-pane fade " id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                            <div class="tab-pane fade " id="purchases" role="tabpanel" aria-labelledby="purchases-tab">
                                 <div id="page-top" class="wide">
                                     <table class="table">
                                         <thead>
@@ -55,7 +62,8 @@
                                                 <th scope="row">1</th>
                                                 <td>{{ item.title }}</td>
                                                 <td>
-                                                    <a  href="{{ item.get_absolute_url }}" class="btn btn-outline-primary btn-equal">
+                                                    <a href="{{ item.get_absolute_url }}"
+                                                       class="btn btn-outline-primary btn-equal">
                                                         مشاهده
                                                     </a>
                                                 </td>
@@ -64,6 +72,45 @@
                                         </tbody>
                                     </table>
                                 </div>
+                            </div>
+                            <div class="tab-pane fade " id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                                <div class="row">
+                                    <div class="col-lg-6">
+                                        <form autocomplete="off" method="post" action="{% url 'account:profile' %}">
+                                            {% csrf_token %}
+                                            {% for field in form.visible_fields %}
+                                                {{ field.label_tag }}
+                                                {{ field }}
+                                            {% endfor %}
+                                            {#                                            {{ form }}#}
+                                            <input class="btn btn-outline-danger btn-equal" type="submit" value="ذخیره">
+                                        </form>
+                                    </div>
+                                    <div class="col-lg-6">
+                                        {% for field in form.visible_fields %}
+                                            {{ field.help_text }}
+                                        {% endfor %}
+                                    </div>
+                                </div>
+
+                                <style>
+                                    .helptext {
+                                        display: block;
+                                        margin-bottom: 2rem;
+                                    }
+                                </style>
+                                <script>
+                                    // Javascript to enable link to tab
+                                    var hash = location.hash.replace(/^#/, '');  // ^ means starting, meaning only match the first hash
+                                    if (hash) {
+                                        $('.nav-tabs a[href="#' + hash + '"]').tab('show');
+                                    }
+
+                                    // Change hash for page-reload
+                                    $('.nav-tabs a').on('shown.bs.tab', function (e) {
+                                        window.location.hash = e.target.hash;
+                                    })
+                                </script>
                             </div>
                         </div>
 
