--- a/apps/account/templates/account/signup.html
+++ b/apps/account/templates/account/signup.html
@@ -51,6 +51,22 @@
                             <div class="row">
                                 <div class="form-group col-md-6">
                                     <div>
+                                        {{ form.password1.label_tag }}
+                                    </div>
+                                    {{ form.password1 }}
+                                    <p class="text-danger"> {{ form.password1.errors.as_text }}</p>
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <div>
+                                        {{ form.password2.label_tag }}
+                                    </div>
+                                    {{ form.password2 }}
+                                    <p class="text-danger">{{ form.password2.errors.as_text }}</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="form-group col-md-6">
+                                    <div>
                                         {{ form.mobile.label_tag }}
                                     </div>
                                     {{ form.mobile }}
@@ -59,34 +75,14 @@
                                 </div>
                                 <div class="form-group col-md-6">
                                     <div>
-                                        {{ form.phone.label_tag }}
+                                        {{ form.telegram_id.label_tag }}
                                     </div>
-                                    {{ form.phone }}
-                                    <p class="text-danger">  {{ form.phone.errors.as_text }}</p>
+                                    {{ form.telegram_id }}
+                                    <p class="text-danger">  {{ form.telegram_id.errors.as_text }}</p>
 
                                 </div>
                             </div>
 
-
-                            <div class="row">
-                                <div class="form-group col-md-6">
-                                    <div>
-                                        {{ form.password1.label_tag }}
-                                    </div>
-                                    {{ form.password1 }}
-                                    <p class="text-danger"> {{ form.password1.errors.as_text }}</p>
-
-                                </div>
-                                <div class="form-group col-md-6">
-                                    <div>
-                                        {{ form.password2.label_tag }}
-                                    </div>
-                                    {{ form.password2 }}
-                                    <p class="text-danger">{{ form.password2.errors.as_text }}</p>
-
-                                </div>
-
-                            </div>
 
                             <div class="row">
                                 <div class="form-group col-12">
@@ -112,15 +108,14 @@
                     {% if form.password1.help_text %}
                         <p class="help">{{ form.password1.help_text|safe }}</p>
                     {% endif %}
+                    {% if form.mobile.help_text %}
+                        <p class="help">{{ form.mobile.help_text|safe }}</p>
+                    {% endif %}
+                    {% if form.telegram_id.help_text %}
+                        <p class="help">{{ form.telegram_id.help_text|safe }}</p>
+                    {% endif %}
                 </div>
             </div>
         </div>
     </div>
-
-    <script>
-        alertify.success('Success message');
-        alertify.error('Error message');
-        alertify.warning('Warning message');
-        alertify.message('Normal message');
-    </script>
 {% endblock content %}
