--- a/apps/account/templates/account/profile.html
+++ b/apps/account/templates/account/profile.html
@@ -74,7 +74,7 @@
                                 </div>
                             </div>
                             <div class="tab-pane fade " id="profile" role="tabpanel" aria-labelledby="profile-tab">
-                                <div class="row">
+                                <div class="row pt-4">
                                     <div class="col-lg-6">
                                         <form autocomplete="off" method="post" action="{% url 'account:profile' %}">
                                             {% csrf_token %}
