--- a/apps/blog/templates/blog/slug.html
+++ b/apps/blog/templates/blog/slug.html
@@ -1,8 +1,25 @@
 {% extends "core/base.html" %}
+{% load jformat %}
 {% load i18n %}
 
 {% block content %}
-    <div id="page-top" class="wide">
+    <!-- mobile View -->
+    <div id="page-top" class="wide d-block d-md-none">
+        <div class="post-item">
+
+            <div class="post-name">
+                <h1> {{ object.title }}</h1>
+                <strong class="post-date">{{ object.pub_date|jformat:'%Y/%m/%d' }}</strong>
+
+            </div>
+            <img class="img-fluid" src="{{ object.picture.url }}" alt="">
+
+            <hr>
+            {{ object.content | safe }}
+        </div>
+    </div>
+
+    <div id="page-top" class="wide d-none d-md-block">
         <!-- Single Service Item ////////// Just this Section is changed! -->
         <div style="float: left ; padding: 1vw;">
             <img class="img-fluid" style="max-width: 40vw" src="{{ object.picture.url }}" alt="">
