--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -1,7 +1,7 @@
 {% extends "core/base.html" %}
 {% load static %}
 {% load jformat %}
-{% load str_month_to_persian %}
+{% load core_tag %}
 {% block content %}
 
     <div id="highlights" class="wide">
