--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -56,11 +56,14 @@
             <div class="col-lg-6">
                 {% for service in highlight_services %}
                     <div class="row services-highlight">
-                        <div class="col-5">
-                            <a href="#"><h1>{{ service.title }}</h1></a>
-                            <a href="#"><img class="" src="{{ service.picture.url }}" alt=""></a>
+                        <div class="col-6 col-md-5">
+                            <div style="position: relative;text-align: center;color: white;">
+                                <a href="{% url 'store:service_slug' service.slug %}"><img class="" src="{{ service.picture.url }}" alt="">
+                                    <div style="color: #eee;background-color: #000000cf;position: absolute;top: 90%;left: 50%;transform: translate(-50%, -50%);width: 100%;">{{ service.title }}</div>
+                                </a>
+                            </div>
                         </div>
-                        <div class="col-7">
+                        <div class="col-6 col-md-7">
                             <p style="text-align: justify">{{ service.introduction }}</p>
                         </div>
                     </div>
@@ -74,11 +77,6 @@
                             <a href="#"><img class="" src="{{ service.picture.url }}" alt="{{ service.title }}"></a>
                         </div>
                     {% endfor %}
-                    {#                    <div class="services-single">#}
-                    {#                        <a href="#"><h1>ارسال رزومه</h1></a>#}
-                    {#                        <a href="#"><img class="" src="{% static "core/images/0001.jpg" %}" alt=""></a>#}
-                    {#                    </div>#}
-
                 </div>
             </div>
         </div>
@@ -92,8 +90,8 @@
                     <div class="events-highlight-single">
                         <div class="event-highlight-date">
                             <a>
-                                <p class="m-0 p-0">{{ event.start_date|jformat:"%d"}}</p>
-                                <p class="m-0 p-0">{{ event.start_date|jformat:"%B" |str_month_to_persian}}</p>
+                                <p class="m-0 p-0">{{ event.start_date|jformat:"%d" }}</p>
+                                <p class="m-0 p-0">{{ event.start_date|jformat:"%B" |str_month_to_persian }}</p>
                             </a>
                         </div>
                         <div class="event-highlight-desc">
