conatact uf orm edit about us initial ver

--- a/apps/contact_us/templates/contact_us/thanks.html
+++ b/apps/contact_us/templates/contact_us/thanks.html
@@ -8,9 +8,16 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="user-form">
-                        <h1>{% translate "Contact us" %}</h1>
+                        <h1>ارتباط با ما</h1>
                         <hr>
-                        thanks for your message
+                        <p>
+                            با سپاس، مسیر ارتباطی ما با شما از طریق واتس آپ هست. لطفا نام و نام خانوادگی خودتون رو به
+                            این
+                            شماره واتس آپ ارسال کنید.
+                        </p>
+                        <p>
+                            شماره واتس آپ: 09198064742
+                        </p>
                     </div>
                 </div>
 
