--- a/apps/core/templates/core/about_us.html
+++ b/apps/core/templates/core/about_us.html
@@ -8,9 +8,34 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="user-form">
-                        <h1>{% translate "About Us" %}</h1>
-                        <hr>
-                        Some Text
+                        <p class="text-center">
+                            بسم الله الرحمن الرحیم
+                        </p>
+                        <p class="text-center"> تعاونو علی البر و التقوی و لا تعاونو علی الاثم والعدوان
+                        </p>
+                        هدف از تاسیس این پایگاه در فضای مجازی ایجاد بستر لازم برای برنامه ریزی و ریل گذاری شما عزیزان
+                        برای رسیدن به مقصد مهاجرتی مورد نظر خودتان است. این پایگاه تابع قوانین دولت جمهوری اسلامی ایران
+                        و مقررات جهانی حاکم بر فضای مجازی می باشد.
+                        <div class="d-flex justify-content-between">
+                            <div>
+                                <img style="max-width: 30vw" src="{% static 'core/images/ebrahim_saneei.jpg' %}"
+                                     class="img-fluid" alt="ابراهیم صانعی">
+                                <p>
+                                    ابراهیم صانعی - هم بنیانگذار سایت آراد مهاجر - دکتری روابط بین الملل
+
+                                </p>
+
+                            </div>
+                            <div>
+                                <img style="max-width: 30vw" src="{% static 'core/images/mmehsi_saneei.jpg' %}"
+                                     class="img-fluid"
+                                     alt="محمد مهدی صانعی">
+                                <p> محمد مهدی صانعی - مدیر عامل موسسه آراد مهاجر ماهان- وکیل مهاجرت
+                                </p>
+                            </div>
+                        </div>
+
+
                     </div>
                 </div>
 
