--- a/apps/contact_us/templates/contact_us/message_form.html
+++ b/apps/contact_us/templates/contact_us/message_form.html
@@ -45,7 +45,7 @@
         {% for field in form.visible_fields %}
             {% if field.errors %}
                 <div class="alert alert-danger" role="alert">برای بخش {{ field.label_tag }}{{ field.errors.as_text }}
-                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                 </div>
             {% endif %}
         {% endfor %}
@@ -104,7 +104,6 @@
             padding: 10px;
             width: 100%;
             font-size: 17px;
-            font-family: Raleway;
             border: 1px solid #aaaaaa;
         }
 
@@ -139,10 +138,14 @@
         .step.finish {
             background-color: #04AA6D;
         }
+        select.invalid{
+            background-color: #FFDDDD;
+        }
+        input[type="email"]{
+            direction: ltr;
+        }
     </style>
     <script>
-
-
         function validateEmail(email) {
             return String(email)
                 .toLowerCase()
@@ -200,7 +203,7 @@
             // A loop that checks every input field in the current tab:
             for (i = 0; i < y.length; i++) {
                 // If a field is empty...
-                if (y[i].value === "") {
+                if (!y[i].checkValidity()) {
                     // add an "invalid" class to the field:
                     y[i].className += " invalid";
                     // and set the current valid status to false:
@@ -213,7 +216,41 @@
                         valid = false;
                     }
                 }
+                console.log(y[i].type === 'select-one')
+                console.log(y[i].value)
+                console.log(y[i].required)
+                console.log(y[i].type === 'select-one' && y[i].value === '' && y[i].required)
+                if (y[i].type === 'select-one' && y[i].value === '' && y[i].required) {
+                    // add an "invalid" class to the field:
+                    y[i].className += " invalid";
+                    // and set the current valid status to false:
+                    valid = false;
+
+                }
             }
+            y = x[currentTab].getElementsByTagName("select");
+            for (i = 0; i < y.length; i++) {
+                // If a field is empty...
+                console.log(y[i].type === 'select-one' && y[i].value === '' && y[i].required)
+                if (y[i].type === 'select-one' && y[i].value === '' && y[i].required) {
+                    // add an "invalid" class to the field:
+                    y[i].className += " invalid";
+                    // and set the current valid status to false:
+                    valid = false;
+
+                }
+            }
+            y = x[currentTab].getElementsByTagName("textarea");
+            for (i = 0; i < y.length; i++) {
+                // If a field is empty...
+                if (!y[i].checkValidity()) {
+                        y[i].className += " invalid";
+                        // and set the current valid status to false:
+                        valid = false;
+                    }
+            }
+
+
             // If the valid status is true, mark the step as finished and valid:
             if (valid) {
                 document.getElementsByClassName("step")[currentTab].className += " finish";
