--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -7,9 +7,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="{% static "core/images/favicon.ico" %}" type="image/x-icon">
-    <link rel="apple-touch-icon" href="{% static "core/images/appicon.png" %}">
-    <link rel="icon" sizes="512x512" href="{% static "core/images/appicon.png" %}">
-    <meta property="og:image" content="{% static "core/images/appicon.png" %}">
+    <link rel="apple-touch-icon" href="{% static "core/images/logo.png" %}">
+    <link rel="icon" sizes="512x512" href="{% static "core/images/logo.png" %}">
+    <meta property="og:image" content="{% static "core/images/logo.png" %}">
     <meta property="og:image:type" content="image/jpeg"/>
     <meta property="og:image:width" content="256"/>
     <meta property="og:image:height" content="256"/>
@@ -56,7 +56,7 @@
     -->
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.rtl.min.css"/>
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/themes/bootstrap.rtl.min.css"/>
-
+    <title>آراد مهاجر</title>
 </head>
 
 <body>
