learning slug responsive service slug responsive event slug responsive

--- a/apps/store/templates/store/service_slug.html
+++ b/apps/store/templates/store/service_slug.html
@@ -38,7 +38,7 @@
         <!-- Cards -->
         <div class="row wide">
             {% for product  in same_product %}
-                <div class="col-sm-4">
+                <div class="col-md-6 col-lg-4">
                     <div class="card">
                         <img class="card-img-to" src="{{ product.picture.url }}" alt="{{ product.picture.description }}">
                         <div class="card-body">
