--- a/apps/store/templates/store/event_slug.html
+++ b/apps/store/templates/store/event_slug.html
@@ -5,18 +5,21 @@
 {% endblock title %}
 {% block content %}
     <div id="page-top" class="wide">
-        <div class="post-item">
-            <div style="float: left ; padding: 1vw;">
-                <img class="img-fluid" style="max-width: 40vw" src="{{ object.picture.url }}" alt="">
-            </div>
-            <div class=" post-item-head">
+        <div class="post-item row">
+            <div class="col-lg-6 post-item-head">
                 <div class="post-name">
                     <h1>{{ event.title }}</h1>
                 </div>
                 <hr>
+                <div class=" d-lg-none">
+                <img class="img-fluid" style="max-width: 100%" src="{{ object.picture.url }}" alt="">
+            </div>
                 {{ event.description }}
             </div>
-            <div style="max-width: 50%">
+            <div class="col-lg-6 d-none d-lg-block">
+                <img class="img-fluid" style="max-width: 100%" src="{{ object.picture.url }}" alt="">
+            </div>
+            <div class="col-lg-6 ">
                 <div class="event-info">
                     <table class="table">
                         <tr>
