--- a/apps/store/templates/store/learning_slug.html
+++ b/apps/store/templates/store/learning_slug.html
@@ -9,7 +9,7 @@
             <div style="float: left ; padding: 1vw;">
                 <img class="img-fluid" style="max-width: 40vw" src="{{ object.picture.url }}" alt="">
             </div>
-            <div class="post-item">
+            <div class="post-item mt-3">
                 <div class="post-name">
                     <h1> {{ object.title }}</h1>
                     <strong class="post-date">01.01.1401</strong>
@@ -26,7 +26,7 @@
                 <div class="ratio ratio-16x9">
                     <iframe src="{{ video_url }}" title="Learning video" allowfullscreen></iframe>
                 </div>
-                <div>
+                <div class="my-3">
                     {{ object.content| safe }}
                 </div>
 
